--- a/horizon-dashboard/src/index.css
+++ b/horizon-dashboard/src/index.css
@@ -4,11 +4,14 @@
 @tailwind components;
 @tailwind utilities;
 
-@import "tailwindcss";
 @custom-variant dark (&:where(.dark, .dark *));
 
 
 @theme {
-  --color-footer:#A3AED0;
-  --color-primary-blue:#4318FF;
+  --color-primary:#2B3674;
+  --color-secondary-gray:#A3AED0;
+  --color-blue-primary:#4318FF;
+  --color-google-btn:#F4F7FE;
+  --color-light:#E0E5F2;
+  --radius-md:12px;
 }
