--- a/horizon-dashboard/src/index.css
+++ b/horizon-dashboard/src/index.css
@@ -16,11 +16,22 @@
   --color-light: #E0E5F2;
   
   /* border-radius */
-  --radius-md: 12px;
+  --radius-primary: 12px;
+  --bottom-left-radius-login:30%;
+  
 }
-
+@layer utilities {
+  .rounded-bl-login {
+    border-bottom-left-radius: var(--bottom-left-radius-login);
+  }
+}
 /*  Dark Mode Overrides */
 .dark {
   --color-secondary-gray: #FFF;
+}
+@layer utilities {
+  .rounded-bl-login {
+    border-bottom-left-radius: var(--bottom-left-radius-login);
+  }
 }
 
