--- a/horizon-dashboard/src/index.css
+++ b/horizon-dashboard/src/index.css
@@ -24,6 +24,12 @@
   .rounded-bl-login {
     border-bottom-left-radius: var(--bottom-left-radius-login);
   }
+  .background-linear-darkmood{
+    background: linear-gradient(90deg, #868CFF 0%, #4318FF 100%);
+  }
+  .dropshadow-darkmood{
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
 }
 /*  Dark Mode Overrides */
 .dark {
