--- a/horizon-dashboard/src/index.css
+++ b/horizon-dashboard/src/index.css
@@ -17,6 +17,7 @@
   --color-white-20:rgba(255, 255, 255, 0.2);
   /* border-radius */
   --radius-primary: 12px;
+  --radius-secondary: 20px;
   --bottom-left-radius-login:30%;
   
 }
@@ -25,6 +26,9 @@
     border-bottom-left-radius: var(--bottom-left-radius-login);
   }
   .background-linear-darkmood{
+    background: linear-gradient(90deg, #868CFF 0%, #4318FF 100%);
+  }
+  .background-linear-upgradecard{
     background: linear-gradient(90deg, #868CFF 0%, #4318FF 100%);
   }
   .dropshadow-darkmood{
