edit style of navbar

--- a/horizon-dashboard/src/index.css
+++ b/horizon-dashboard/src/index.css
@@ -9,12 +9,14 @@
 
 @theme {
   /* colors */
+  --color-body-bg:#F4F7FE;
   --color-primary: #2B3674;
   --color-secondary-gray: #A3AED0;
   --color-blue-primary: #4318FF;
   --color-google-btn: #F4F7FE;
   --color-light: #E0E5F2;
   --color-white-20:rgba(255, 255, 255, 0.2);
+  
   /* border-radius */
   --radius-primary: 12px;
   --radius-secondary: 20px;
