complete navbar section

--- a/horizon-dashboard/src/index.css
+++ b/horizon-dashboard/src/index.css
@@ -9,7 +9,7 @@
 
 @theme {
   /* colors */
-  --color-body-bg:#F4F7FE;
+  --color-body:#F4F7FE;
   --color-primary: #2B3674;
   --color-secondary-gray: #A3AED0;
   --color-blue-primary: #4318FF;
