--- a/horizon-dashboard/src/index.css
+++ b/horizon-dashboard/src/index.css
@@ -11,17 +11,20 @@
   /* colors */
   --color-body:#F4F7FE;
   --color-primary: #2B3674;
+  --color-secondary:#707EAE;
   --color-secondary-gray: #A3AED0;
   --color-blue-primary: #4318FF;
   --color-google-btn: #F4F7FE;
   --color-light: #E0E5F2;
   --color-white-20:rgba(255, 255, 255, 0.2);
   
+  
   /* border-radius */
   --radius-primary: 12px;
   --radius-secondary: 20px;
   --bottom-left-radius-login:30%;
   
+  --font-weight-main-bold:700;
 }
 @layer utilities {
   .rounded-bl-login {
