--- a/horizon-dashboard/src/index.css
+++ b/horizon-dashboard/src/index.css
@@ -15,7 +15,8 @@
   --color-google-btn: #F4F7FE;
   --color-light: #E0E5F2;
   --color-white-20:rgba(255, 255, 255, 0.2);
-  
+  --color-primary-green:#05CD99;
+  --color-secondary-blue:#6AD2FF;
   
   /* border-radius */
   --radius-primary: 12px;
@@ -57,4 +58,11 @@
 
 #AdvBtn2:hover ~ #AdvBgBtn{
   left: 130px;
+}
+.recharts-wrapper svg:focus{
+  outline: none;
+  border: none;
+}
+.recharts-text{
+  fill: var(--color-secondary-gray);
 }
