--- a/horizon-dashboard/src/index.css
+++ b/horizon-dashboard/src/index.css
@@ -17,6 +17,7 @@
   --color-white-20:rgba(255, 255, 255, 0.2);
   --color-primary-green:#05CD99;
   --color-secondary-blue:#6AD2FF;
+  --color-progress-bar:#EFF4FB;
   
   /* border-radius */
   --radius-primary: 12px;
