--- a/horizon-dashboard/src/index.css
+++ b/horizon-dashboard/src/index.css
@@ -11,6 +11,7 @@
   --color-secondary:#707EAE;
   --color-secondary-gray: #A3AED0;
   --color-secondary-light:#E3DAFF;
+  --color-primary-light:#EFF4FB;
   --color-blue-primary: #4318FF;
   --color-google-btn: #F4F7FE;
   --color-light: #E0E5F2;
